{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 143,
  "lineage": "baa48274-8bf0-17f5-7157-a85c2f892296",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "servidor_prueba",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c7217cdde317cfec",
            "arn": "arn:aws:ec2:us-east-1:496359311969:instance/i-0283bc71ec1b66804",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "perfil_instancia_ec2_hardened",
            "id": "i-0283bc71ec1b66804",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-090bc6459d62c2879",
            "private_dns": "ip-10-0-1-6.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.6",
            "public_dns": "ec2-100-31-195-234.compute-1.amazonaws.com",
            "public_ip": "100.31.195.234",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:496359311969:key/ef91c828-b70e-4784-b117-37f4fe3d25c3",
                "throughput": 125,
                "volume_id": "vol-0d864819441cb3efc",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07b90d10ac7c8b6e6",
            "tags": {
              "Name": "EC2-Hardened-IaC"
            },
            "tags_all": {
              "Name": "EC2-Hardened-IaC"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0354947d585d1c587"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.perfil_instancia_ec2",
            "aws_iam_role.rol_ec2_s3",
            "aws_security_group.sg_servidor",
            "aws_subnet.subred_publica",
            "aws_vpc.vpc_principal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_principal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:496359311969:internet-gateway/igw-0f600d370daa60861",
            "id": "igw-0f600d370daa60861",
            "owner_id": "496359311969",
            "tags": {
              "Name": "IGW-Principal"
            },
            "tags_all": {
              "Name": "IGW-Principal"
            },
            "vpc_id": "vpc-0ad68e2eb54886545"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_principal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tabla_publica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:496359311969:route-table/rtb-043a183ba99cfd4db",
            "id": "rtb-043a183ba99cfd4db",
            "owner_id": "496359311969",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f600d370daa60861",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Tabla-Rutas-Publica"
            },
            "tags_all": {
              "Name": "Tabla-Rutas-Publica"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad68e2eb54886545"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw_principal",
            "aws_vpc.vpc_principal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "asociacion_subred",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7bc9c939ebf2775",
            "route_table_id": "rtb-043a183ba99cfd4db",
            "subnet_id": "subnet-07b90d10ac7c8b6e6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw_principal",
            "aws_route_table.tabla_publica",
            "aws_subnet.subred_publica",
            "aws_vpc.vpc_principal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_servidor",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:496359311969:security-group/sg-0354947d585d1c587",
            "description": "Trafico HTTP publico y SSH restringido por IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Salida total permitida",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0354947d585d1c587",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP publico",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "181.44.0.1/32"
                ],
                "description": "SSH exclusivo para IP de administracion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_servidor_hardened",
            "name_prefix": "",
            "owner_id": "496359311969",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-Hardened"
            },
            "tags_all": {
              "Name": "SG-Hardened"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad68e2eb54886545"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_principal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subred_publica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:496359311969:subnet/subnet-07b90d10ac7c8b6e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b90d10ac7c8b6e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "496359311969",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subred-Publica-Hardened"
            },
            "tags_all": {
              "Name": "Subred-Publica-Hardened"
            },
            "vpc_id": "vpc-0ad68e2eb54886545"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_principal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_principal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:496359311969:vpc/vpc-0ad68e2eb54886545",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01b856d9312a46fef",
            "default_route_table_id": "rtb-023410dae20d65f04",
            "default_security_group_id": "sg-0482a1aaeae2b57c1",
            "dhcp_options_id": "dopt-02cec7c302d5b03b1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ad68e2eb54886545",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-023410dae20d65f04",
            "owner_id": "496359311969",
            "tags": {
              "Name": "VPC-Hardened"
            },
            "tags_all": {
              "Name": "VPC-Hardened"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}